--- a/basics-of-react/converter.html
+++ b/basics-of-react/converter.html
@@ -14,34 +14,43 @@
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
     function App() {
-      const [minutes, setMinutes] = React.useState(0);
+      const [amount, setAmount] = React.useState(0);
+      const [flipped, setFlipped] = React.useState(false);
       const onChange = (event) => {
-        setMinutes(event.target.value);
+        setAmount(event.target.value);
       };
-      const reset = () => setMinutes(0);
+      const reset = () => setAmount(0);
+      // const onFlip = () => setFlipped(!flipped);
+      const onFlip = () => {
+        reset();
+        setFlipped((current) => !current);
+      }
       return (
         <div>
           <h1 className="h1">Super Converter</h1>
           <div>
             <label htmlfor="minutes">Minutes</label>
             <input
-              value={minutes} // state로 연결
+              value={flipped ? amount * 60 : amount} // state로 연결
               id="minutes"
               placeholder="Minutes"
               type="number"
               onChange={onChange}
+              disabled={flipped}
             />
           </div>
           <div>
             <label htmlfor="hours">Hours</label>
             <input
-              value={Math.round(minutes / 60)}
+              value={flipped ? amount : Math.round(amount / 60)}
               id="hours"
               placeholder="Hours"
               type="number"
-              disabled />
+              disabled={!flipped}
+              onChange={onChange} />
           </div>
           <button onClick={reset}>Reset</button>
+          <button onClick={onFlip}>Flip</button>
         </div>
       );
     }
