--- a/basics-of-react/converter.html
+++ b/basics-of-react/converter.html
@@ -15,15 +15,15 @@
   <script type="text/babel">
     function App() {
       const [amount, setAmount] = React.useState(0);
-      const [flipped, setFlipped] = React.useState(false);
+      const [inverted, setInverted] = React.useState(false);
       const onChange = (event) => {
         setAmount(event.target.value);
       };
       const reset = () => setAmount(0);
-      // const onFlip = () => setFlipped(!flipped);
-      const onFlip = () => {
+      // const onInvert = () => setInverted(!inverted);
+      const onInvert = () => {
         reset();
-        setFlipped((current) => !current);
+        setInverted((current) => !current);
       }
       return (
         <div>
@@ -31,26 +31,27 @@
           <div>
             <label htmlfor="minutes">Minutes</label>
             <input
-              value={flipped ? amount * 60 : amount} // state로 연결
+              value={inverted ? amount * 60 : amount} // state로 연결
               id="minutes"
               placeholder="Minutes"
               type="number"
               onChange={onChange}
-              disabled={flipped}
+              disabled={inverted}
             />
           </div>
           <div>
             <label htmlfor="hours">Hours</label>
             <input
-              value={flipped ? amount : Math.round(amount / 60)}
+              value={inverted ? amount : Math.round(amount / 60)}
               id="hours"
               placeholder="Hours"
               type="number"
-              disabled={!flipped}
-              onChange={onChange} />
+              onChange={onChange}
+              disabled={!inverted}
+            />
           </div>
           <button onClick={reset}>Reset</button>
-          <button onClick={onFlip}>Flip</button>
+          <button onClick={onInvert}>{inverted ? "Turn back" : "Invert"}</button>
         </div>
       );
     }
