--- a/basics-of-react/converter.html
+++ b/basics-of-react/converter.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>react로 버튼 클릭 수 세기</title>
+  <title>converter</title>
 </head>
 
 <body>
