--- a/basics-of-react/props.html
+++ b/basics-of-react/props.html
@@ -14,27 +14,35 @@
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
     //컴포넌트의 첫 글자는 반드시 대문자여야 한다. // 컴포넌트 === 어떤 JSX를 반환하는 함수
-    function Btn({ text, big }) { //Btn(props)
-      console.log(text, big);
-      return <button style={{
-        backgroundColor: "tomato",
-        color: "white",
-        padding: "10px 20px",
-        border: 0,
-        borderRadius: 10,
-        fontSize: big ? 18 : 16,
-      }}>
-        {text}
-      </button>;
+    function Btn({ text, onClick }) { //Btn(props)
+      console.log(text, "was rendered");
+      return (
+        <button
+          onClick={onClick}
+          style={{
+            backgroundColor: "tomato",
+            color: "white",
+            padding: "10px 20px",
+            border: 0,
+            borderRadius: 10,
+          }}>
+          {text}
+        </button>
+      );
     }
-
+    const MemorizedBtn = React.memo(Btn)  //React.Memo() state가 변경되지 않는(props가 변경되지 않는다면) 컴포넌트가 다시 그려지는 것을 원치 않는다고 인식시켜줄 수 있다.
     function App() {
+      const [value, setValue] = React.useState("Save Changes");
+      const changeValue = () => setValue("Revert Changes");
       return (
         // JSX내부
         <div>
-          <Btn text="Save Changes" big="true" />
-          <Btn text="Continue" big="false" />
+          <MemorizedBtn text={value} onClick={changeValue} />
+          <MemorizedBtn text="Continue" />
         </div>
+        // onClick을 컴포넌트에 넣는다면 이벤트리스너가 아님.단지 하나의 prop이다.
+
+
       );
     };
     const $root = document.getElementById('root');
